--- a/web/app/views/setting/index.html
+++ b/web/app/views/setting/index.html
@@ -5,7 +5,7 @@
             <!-- modal b -->
             <!--用户添加-->
             <div id="J_userAddModal" class="modal fade" role="dialog" aria-hidden="true" >
-                <div class="modal-dialog modal-lg">
+                <div class="modal-dialog modal-md">
                     <div class="modal-content" ng-include="'views/setting/userAddModal.html'"></div>
                 </div>
             </div>
@@ -35,6 +35,8 @@
                     </div>
                 </div>
             </div>
+            <!-- 错误提示弹框 -->
+            <error-alert msg="sysError"></error-alert>
             <!-- modal e -->
             <div class="row wrap">
                 <!-- 子菜单 b -->
