--- a/web/app/views/setting/auditAnalyModal.html
+++ b/web/app/views/setting/auditAnalyModal.html
@@ -1,16 +1,17 @@
 <div class="modal-header">
-    <button type="button" class="close"  aria-hidden="true" data-dismiss="modal">×</button>
-    <h6>系统提示</h6>
+    <button type="button" class="close" aria-hidden="true" data-dismiss="modal">×</button>
+    <h6>{{modalTitle}}</h6>
 </div>
 <div class="modal-body">
-    <p class="text-center">导出成功，请<a role="button" class="j-export" href="{{exportHref}}" target="_blank">点击此处下载</a>.</p>
+    <p class="text-center">确定导出统计结果到本地?</p>
 </div>
 <div class="modal-footer">
-    <div class="alert alert-danger text-left pl50" role="alert" ng-show="errorMsg!='' && successMsg==''">
+    <div class="alert alert-danger text-center" role="alert" ng-show="errorMsg!='' && successMsg==''">
         {{errorMsg}}
     </div>
     <div class="alert alert-success text-center" role="alert" ng-show="successMsg!='' && errorMsg==''">
         {{successMsg}}
     </div>
-    <button class="btn btn-warning btn-md" aria-hidden="true" data-dismiss="modal" >关 闭</button>
+    <button class="btn btn-warning btn-md" aria-hidden="true" data-dismiss="modal" ng-hide="cancelButton==='关闭'">取消</button>
+    <button class="btn btn-warning btn-md" ng-click="getExportExcel($event)">{{cancelButton}}</button>
 </div>
