--- a/web/app/src/css/mod/common/scrollbar.css
+++ b/web/app/src/css/mod/common/scrollbar.css
@@ -1,6 +1,6 @@
 /* 自定义模态框滚动条 */
 .mCS-my-theme.mCSB_scrollTools{
-	top: 20px;
+	top: 0;
 	right: -5px;
 }
 .mCS-my-theme.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar{
