--- a/web/app/views/setting/auditAnalyModal.html
+++ b/web/app/views/setting/auditAnalyModal.html
@@ -12,6 +12,6 @@
     <div class="alert alert-success text-center" role="alert" ng-show="successMsg!='' && errorMsg==''">
         {{successMsg}}
     </div>
-    <button class="btn btn-warning btn-md" aria-hidden="true" data-dismiss="modal" ng-hide="cancelButton==='关闭'">取消</button>
     <button class="btn btn-warning btn-md" ng-click="getExportExcel($event)">{{cancelButton}}</button>
+    <button class="btn btn-info btn-md" aria-hidden="true" data-dismiss="modal" ng-hide="cancelButton==='关闭'">取消</button>
 </div>
