--- a/web/app/views/setting/userPwdModal.html
+++ b/web/app/views/setting/userPwdModal.html
@@ -7,20 +7,20 @@
         <div class="col-lg-12">
             <form class="form-horizontal" name="setUserPwdForm" method="post">
                 <div class="form-group text-center">
-                    <label class="control-label label-custom-modal width85" for="J_userPwdName">用户名：</label>
-                    <div class="input-custom input-custom-lg">
+                    <label class="control-label col-lg-3" for="J_userPwdName">用户名：</label>
+                    <div class="col-lg-9">
                         <input class="form-control" type="text" autocomplete="off" id="J_userPwdName" ng-model="userPwdForm.username" readonly>
                     </div>
                 </div>
                 <div class="form-group text-center">
-                    <label class="control-label label-custom-modal width85" for="J_userPwdUpdate_new">新密码：</label>
-                    <div class="input-custom input-custom-lg">
+                    <label class="control-label col-lg-3" for="J_userPwdUpdate_new"><span class="txt-impt">*</span>新密码：</label>
+                    <div class="col-lg-9">
                         <input class="form-control" type="password" name="setNewPwd" autocomplete="off" id="J_userPwdUpdate_new" ng-model="userPwdForm.newPwd" ng-change="clearErrMessage()">
                     </div>
                 </div>
                 <div class="form-group text-center">
-                    <label class="control-label label-custom-modal width85" for="J_userPwdUpdate_repeat">请再次输入：</label>
-                    <div class="input-custom input-custom-lg">
+                    <label class="control-label col-lg-3" for="J_userPwdUpdate_repeat"><span class="txt-impt">*</span>确认密码：</label>
+                    <div class="col-lg-9">
                         <input class="form-control" type="password" name="setRepeatPwd" autocomplete="off" id="J_userPwdUpdate_repeat" ng-model="userPwdForm.repeatPwd" ng-change="clearErrMessage()">
                     </div>
                 </div>
