--- a/web/app/src/css/main.css
+++ b/web/app/src/css/main.css
@@ -73,6 +73,7 @@ textarea {
 .mgt50{margin-top: 50px;}
 .mgt60{margin-top: 60px;}
 .mgt-28{margin-top:-28px;}
+.mgb5{margin-bottom:5px;}
 .mgb10{ margin-bottom:10px;}
 .mgb40{margin-bottom: 40px;}
 .mg10{ margin:10px;}
