--- a/web/app/views/setting/userAddModal.html
+++ b/web/app/views/setting/userAddModal.html
@@ -116,6 +116,6 @@
 			{{successMsg}}
 		</div>
 	</div>
-	<button class="btn btn-info btn-md" data-text="确定" ng-click="addUser(actionType,$event)">确定</button>
+	<button class="btn btn-info btn-md" data-text="确定" ng-click="addUser($event)">确定</button>
 	<button class="btn btn-warning btn-md" data-text="取消" data-dismiss="modal" aria-hidden="true">取消</button>
 </div>
